lucene search + preconditions

--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -19,7 +19,7 @@
         <a href="{SET_IN_PROGRESS}">{SET_IN_PROGRESS_TXT}</a>
     </div>
     <div>
-        <a href="{SET_PASSED}">{SET_PASSED_TXT}</a>
+        <a href="{SET_COMPLETED}">{SET_COMPLETED_TXT}</a>
     </div>
     <div>
         <a href="{SET_FAILED}">{SET_FAILED_TXT}</a>
